--- a/AnimationApp/AppShell.xaml
+++ b/AnimationApp/AppShell.xaml
@@ -4,7 +4,10 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:AnimationApp"
-    Shell.FlyoutBehavior="Disabled">
+    Shell.FlyoutBehavior="Disabled"
+    Shell.NavBarIsVisible="False"
+    Shell.PresentationMode="NotAnimated"
+    NavigationPage.HasBackButton="False">
 
     <ShellContent
         Title="Home"
